--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Jiakai.Wu's Blog # the main title
+title: Jiakai.Wu's NOTE # the main title
 
 tagline: Jiakai.Wu's NOTE 日常随笔  # it will display as the subtitle
 
